--- a/app/assets/stylesheets/redesign/pages/_homepage.scss
+++ b/app/assets/stylesheets/redesign/pages/_homepage.scss
@@ -103,6 +103,9 @@
     .copy-align--top {
       margin-top: -250px;
     }
+    .middle-carousel-item .copy-align--top {
+      margin-top: 50px;
+    }
 
     .hero-wrap .sub-heading--large {
       font-size: 2.8rem;
